updates filenames and paths

--- a/CUBIT_GEOCUBIT/examples/topography_models/Mount_StHelens/mout_sthelens.cfg
+++ b/CUBIT_GEOCUBIT/examples/topography_models/Mount_StHelens/mout_sthelens.cfg
@@ -11,9 +11,9 @@ export_exodus_mesh = True
 debug_geometry=True
 
 [simulation.cpu_parameters]
-#number_processor_xi                        =15
-#number_processor_eta                       =10
-ncpus=1
+number_processor_xi                        = 2
+number_processor_eta                       = 2
+ncpus=4
 
 #
 [geometry.volumes]
@@ -28,13 +28,12 @@ unit                            = utm
 
 
 # geo or utm
-
 [geometry.volumes.layercake]
 nz = 2
 #included the bottom
 bottomflat = True
-depth_bottom = -10000
-filename = /Users/emanuele/Documents/Dropbox/EXAMPLE_GEOCUBIT/topography_models/Mount_StHelens/ptopo.mean.utm,
+depth_bottom = -10000.0
+filename = ./Mount_StHelens/ptopo.mean.utm,
 geometry_format=ascii
 
 [meshing]
