--- a/Makefile.in
+++ b/Makefile.in
@@ -48,6 +48,7 @@ FCCOMPILE_CHECK =@FCENV@ ${FC} ${FCFLAGS} $(FLAGS_CHECK) $(COND_OPENMP_FFLAGS)
 MPIFCCOMPILE_CHECK =@FCENV@ ${MPIFC} ${FCFLAGS} $(FLAGS_CHECK) $(COND_OPENMP_FFLAGS)
 
 CC = @CC@
+CXX = @CXX@
 CFLAGS = @CFLAGS@ $(CPPFLAGS)
 CPPFLAGS = -I${SETUP} @CPPFLAGS@ $(COND_MPI_CPPFLAGS)
 
