adds myrank to constants module; comments out unused routines; adds initial openmp statements

--- a/Makefile.in
+++ b/Makefile.in
@@ -225,10 +225,7 @@ GENCODE_70 = -gencode=arch=compute_70,code=\"sm_70,compute_70\"
 @COND_OMP_TRUE@OPENMP = yes
 @COND_OMP_FALSE@OPENMP = no
 
-@COND_OMP_TRUE@OMP_FLAGS = @OMP_FCFLAGS@ $(FC_DEFINE)USE_OPENMP
-@COND_OMP_FALSE@OMP_FLAGS =
-
-FCFLAGS += $(OMP_FLAGS)
+@COND_OMP_TRUE@FCFLAGS += $(FC_DEFINE)USE_OPENMP @OMP_FCFLAGS@
 
 @COND_OMP_TRUE@OMP_LIBS = $(OMP_LIB)
 @COND_OMP_FALSE@OMP_LIBS =
