--- a/setup/config.fh.in
+++ b/setup/config.fh.in
@@ -66,12 +66,25 @@
 !
 !-----------------------------------------------------------------------
 
-! macros for vectorization (DK DK July 2016: forcing vectorization is now suppressed)
+! macros for vectorization
 
+! switches indexing between: array( i,j,k .. ) <-> array( ijk,1,1 .. )
+#ifdef FORCE_VECTORIZATION
+#  define INDEX_IJK  ijk,1,1
+#else
 #  define INDEX_IJK  i,j,k
+#endif
 
 ! switches do-loops between: do k=1,NGLLZ; do j=1,NGLLY; do i=1,NGLLX <-> do ijk=1,NGLLCUBE
+#ifdef FORCE_VECTORIZATION
+#  define DO_LOOP_IJK  do ijk=1,NGLLCUBE
+#else
 #  define DO_LOOP_IJK  do k=1,NGLLZ; do j=1,NGLLY; do i=1,NGLLX
+#endif
 
 ! switches enddo-loops between: enddo; enddo; enddo ! NGLLZ,NGLLY,NGLLX <-> enddo ! NGLLCUBE
+#ifdef FORCE_VECTORIZATION
+#  define ENDDO_LOOP_IJK  enddo ! NGLLCUBE
+#else
 #  define ENDDO_LOOP_IJK  enddo; enddo; enddo ! NGLLZ,NGLLY,NGLLX
+#endif
