add compile flag for hdf5

--- a/Makefile.in
+++ b/Makefile.in
@@ -285,6 +285,17 @@ MPILIBS += @ASDF_LIBS@
 
 #######################################
 ####
+#### HDF5
+#### with configure: ./configure --with-hdf5
+####
+#######################################
+
+@COND_HDF5_TRUE@HDF5 = yes
+@COND_HDF5_FALSE@HDF5 = no
+
+
+#######################################
+####
 #### directories
 ####
 #######################################
