--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,9 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Install packages
-      run: sudo apt install -yq --no-install-recommends gfortran g++ openmpi-bin libopenmpi-dev
+      run: |
+        sudo apt install -yq --no-install-recommends gfortran g++ openmpi-bin libopenmpi-dev
+        export TERM="xterm-256color"
 
     - name: configure
       run: ./configure
@@ -34,10 +36,15 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Install dependencies
-      run: brew install gcc openmpi
+      run: |
+        brew install gcc openmpi
+        export TERM="xterm-256color"
 
     - name: configure
-      run: ./configure
+      run: |
+        ./configure
+        echo "modifying external_libs/scotch/src/Makefile.inc"
+        cp -v external_libs/scotch/src/Make.inc/Makefile.inc.i686_mac_darwin8 external_libs/scotch/src/Makefile.inc
 
     - name: make
       run: make -j2
