--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ jobs:
       run: ./configure
       
     - name: make
-      run: make -j2
+      run: make -j2 all
       
     - name: make tests
       run: make tests
@@ -47,7 +47,7 @@ jobs:
         cp -v external_libs/scotch/src/Make.inc/Makefile.inc.i686_mac_darwin8 external_libs/scotch/src/Makefile.inc
 
     - name: make
-      run: make -j2
+      run: make -j2 all
 
     - name: make tests
       run: make tests
