--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,14 @@ jobs:
     - name: Install packages
       run: |
         sudo apt install -yq --no-install-recommends gfortran g++ openmpi-bin libopenmpi-dev
-        export TERM="xterm-256color"
+        echo "compiler versions:" ${FC} ${MPIFC} ${CC}
+        gcc --version
+        gfortran --version
+        mpif90 --version
+        export TERM=xterm
+        echo "exports:"
+        export
+        echo ""
 
     - name: configure
       run: ./configure
@@ -38,7 +45,14 @@ jobs:
     - name: Install dependencies
       run: |
         brew install gcc openmpi
-        export TERM="xterm-256color"
+        echo "compiler versions:" ${FC} ${MPIFC} ${CC}
+        gcc --version
+        gfortran --version
+        mpif90 --version
+        export TERM=xterm
+        echo "exports:"
+        export
+        echo ""
 
     - name: configure
       run: |
