--- a/.travis.yml
+++ b/.travis.yml
@@ -129,7 +129,7 @@ env:
     # gmsh example w/ hex27
     - TESTID=34 TESTCOV=0 TESTDIR=27 TESTFLAGS="--without-mpi" CUDA=false
 
-    # gmsh example w/ hex27
+    # waterlayered_poroelastic example
     - TESTID=35 TESTCOV=0 TESTDIR=28 TESTFLAGS="--enable-vectorization --with-mpi" CUDA=false
 
 before_install:
